test/corpus/vars.txt
======================
Pre-request vars block
======================

vars:pre-request {
  departingDate: 2020-01-01
  ~returningDate: 2020-01-02
}

---

(document
  (vars
    (vars_pre_request
      (keyword)
      (dictionary
        (pair
          (key)
          (value))
        (pair
          (key)
          (value))))))

========================
Post-response vars block
========================

vars:post-response {
  token: $res.body.token
  @orderNumber: $res.body.orderNumber
  ~petId: $res.body.id
  ~@transactionId: $res.body.transactionId
}

---

(document
  (vars
    (vars_post_response
      (keyword)
      (dictionary
        (pair
          (key)
          (value))
        (pair
          (key)
          (value))
        (pair
          (key)
          (value))
        (pair
          (key)
          (value))))))
